jump box fix and minor edits

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,17 @@ pre {
     }
   }
 }
+// crass boarder fix could find way to change vairble instead
+.btn {
+  border-radius: 0.25rem !important;
+}
+
+.btn-sm {
+  border-radius: 0.25rem !important;
+}
+.field--name-node-changed-date {
+      display: none;
+}
 
 .site-footer {
   display: flex;
@@ -1535,7 +1546,7 @@ pre {
           width: 40%;
           background-color: white;
           transition: clip-path 0.5s;
-          padding: 0;
+          padding: 0 !important;
           pointer-events: none;
           h3 {
             margin-bottom: 0 !important;
@@ -1710,6 +1721,8 @@ pre {
         border-radius: var(--bs-border-radius-lg) !important;
       }
       .carousel-caption {
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
         border-radius: var(--bs-border-radius-lg) !important;
         h1,h2,h3,h4,span,div {
           border-radius: var(--bs-border-radius-lg) !important;
